test/corpus/expressions.txt
================================================================================
property access forms
================================================================================

obj.name;
obj.("computed");
obj.:waif_prop;
$system_prop;

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (property_expression
        (identifier)
        (identifier))))
  (statement
    (single_statement
      (property_expression
        (identifier)
        (parenthesized_expression
          (string)))))
  (statement
    (single_statement
      (waif_property_expression
        (identifier)
        (identifier))))
  (statement
    (single_statement
      (dollar_property
        (identifier)))))

================================================================================
verb call forms
================================================================================

obj:verb(1, @args);
obj:(name)();
$util:helper();
$sys_verb("x");

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (verb_call_expression
        (identifier)
        (identifier)
        (arguments
          (integer)
          (splice
            (identifier))))))
  (statement
    (single_statement
      (verb_call_expression
        (identifier)
        (parenthesized_expression
          (identifier))
        (arguments))))
  (statement
    (single_statement
      (verb_call_expression
        (dollar_property
          (identifier))
        (identifier)
        (arguments))))
  (statement
    (single_statement
      (dollar_verb_call
        (identifier)
        (arguments
          (string))))))

================================================================================
builtin function call
================================================================================

notify(player, tostr("n = ", n));

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (function_call
        (identifier)
        (arguments
          (identifier)
          (function_call
            (identifier)
            (arguments
              (string)
              (identifier))))))))

================================================================================
index, range, first and last
================================================================================

x[1];
x[^..$];
x[$ - 1];
{1, 2, 3}[2];

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (index_expression
        (identifier)
        (integer))))
  (statement
    (single_statement
      (range_expression
        (identifier)
        (first_index)
        (last_index))))
  (statement
    (single_statement
      (index_expression
        (identifier)
        (binary_expression
          (last_index)
          (integer)))))
  (statement
    (single_statement
      (index_expression
        (list
          (integer)
          (integer)
          (integer))
        (integer)))))

================================================================================
assignment targets
================================================================================

x = 1;
$flag = 0;
obj.prop = 2;
obj.:wp = 3;
x[1] = 4;
x[1..2] = {};
x.a[2].b = 5;

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (assignment_expression
        (identifier)
        (integer))))
  (statement
    (single_statement
      (assignment_expression
        (dollar_property
          (identifier))
        (integer))))
  (statement
    (single_statement
      (assignment_expression
        (property_expression
          (identifier)
          (identifier))
        (integer))))
  (statement
    (single_statement
      (assignment_expression
        (waif_property_expression
          (identifier)
          (identifier))
        (integer))))
  (statement
    (single_statement
      (assignment_expression
        (index_expression
          (identifier)
          (integer))
        (integer))))
  (statement
    (single_statement
      (assignment_expression
        (range_expression
          (identifier)
          (integer)
          (integer))
        (list))))
  (statement
    (single_statement
      (assignment_expression
        (property_expression
          (index_expression
            (property_expression
              (identifier)
              (identifier))
            (integer))
          (identifier))
        (integer)))))

================================================================================
scatter assignment
================================================================================

{a, ?b, ?c = 3, @rest} = args;
{error, ?message = ""} = args;

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (scatter_assignment
        (scatter_item
          (identifier))
        (scatter_item
          (identifier))
        (scatter_item
          (identifier)
          (integer))
        (scatter_item
          (identifier))
        (identifier))))
  (statement
    (single_statement
      (scatter_assignment
        (scatter_item
          (identifier))
        (scatter_item
          (identifier)
          (string))
        (identifier)))))

================================================================================
list is not a scatter without =
================================================================================

return {a, @b};

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (return_statement
        (list
          (identifier)
          (splice
            (identifier)))))))

================================================================================
catch expressions
================================================================================

`x.y ! ANY';
`x.y ! E_PERM, E_PROPNF => 0';
`o:(v)() ! 1';
`f() ! @codes => default';
`$prop = this ! any';

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (catch_expression
        (property_expression
          (identifier)
          (identifier))
        (exception_codes))))
  (statement
    (single_statement
      (catch_expression
        (property_expression
          (identifier)
          (identifier))
        (exception_codes
          (error_code)
          (error_code))
        (integer))))
  (statement
    (single_statement
      (catch_expression
        (verb_call_expression
          (identifier)
          (parenthesized_expression
            (identifier))
          (arguments))
        (exception_codes
          (integer)))))
  (statement
    (single_statement
      (catch_expression
        (function_call
          (identifier)
          (arguments))
        (exception_codes
          (splice
            (identifier)))
        (identifier))))
  (statement
    (single_statement
      (catch_expression
        (assignment_expression
          (dollar_property
            (identifier))
          (identifier))
        (exception_codes)))))
