test/corpus/literals.txt
================================================================================
integers and objects
================================================================================

{0, 42, #0, #123, #-1};

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (list
        (integer)
        (integer)
        (object)
        (object)
        (object)))))

================================================================================
floats with fraction and exponent
================================================================================

{1.5, .5, 1e-09, 1E+15, 2.5e3, 1.e5};

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (list
        (float)
        (float)
        (float)
        (float)
        (float)
        (float)))))

================================================================================
integer range bounds are not floats
================================================================================

x[1..2];

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (range_expression
        (identifier)
        (integer)
        (integer)))))

================================================================================
strings with escapes
================================================================================

{"", "plain", "say \"hi\"", "back\\slash"};

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (list
        (string)
        (string)
        (string)
        (string)))))

================================================================================
error codes are case-insensitive keywords
================================================================================

{E_PERM, e_invarg, E_Range, E_INTRPT};

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (list
        (error_code)
        (error_code)
        (error_code)
        (error_code)))))

================================================================================
identifiers that look like keywords elsewhere
================================================================================

{error, true, false, E_CUSTOM, endiff};

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (list
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
lists and maps
================================================================================

{{}, {1, @rest}, [], ["a" -> 1, 2 -> {}]};

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (list
        (list)
        (list
          (integer)
          (splice
            (identifier)))
        (map)
        (map
          (map_entry
            (string)
            (integer))
          (map_entry
            (integer)
            (list)))))))

================================================================================
block comments are extras
================================================================================

x = /* note */ 1;

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (assignment_expression
        (identifier)
        (comment)
        (integer)))))
