test/corpus/statements.txt
================================================================================
simple statements
================================================================================

return player.location;
return;
break outer;
continue;
;
"string statements are the conventional comment";

--------------------------------------------------------------------------------

(source_file
  (statement
    (single_statement
      (return_statement
        (property_expression
          (identifier)
          (identifier)))))
  (statement
    (single_statement
      (return_statement)))
  (statement
    (single_statement
      (break_statement
        (identifier))))
  (statement
    (single_statement
      (continue_statement)))
  (statement
    (single_statement))
  (statement
    (single_statement
      (string))))

================================================================================
if elseif else
================================================================================

if (player in connected_players())
  x = 1;
elseif (player.wizard)
  x = 2;
else
  x = 3;
endif

--------------------------------------------------------------------------------

(source_file
  (statement
    (if_statement
      (if_clause
        (condition
          (binary_expression
            (identifier)
            (function_call
              (identifier)
              (arguments))))
        (statement
          (single_statement
            (assignment_expression
              (identifier)
              (integer)))))
      (elseif_clause
        (condition
          (property_expression
            (identifier)
            (identifier)))
        (statement
          (single_statement
            (assignment_expression
              (identifier)
              (integer)))))
      (else_clause
        (statement
          (single_statement
            (assignment_expression
              (identifier)
              (integer))))))))

================================================================================
for loops
================================================================================

for item in (items)
endfor
for value, key in (map)
endfor
for i in [1..$]
endfor

--------------------------------------------------------------------------------

(source_file
  (statement
    (for_statement
      (for_clause
        (identifier)
        (identifier))))
  (statement
    (for_statement
      (for_clause
        (identifier)
        (identifier)
        (identifier))))
  (statement
    (for_statement
      (for_clause
        (identifier)
        (integer)
        (last_index)))))

================================================================================
while and fork with labels
================================================================================

while outer (1)
  break outer;
endwhile
fork task (0)
  suspend(0);
endfork

--------------------------------------------------------------------------------

(source_file
  (statement
    (while_statement
      (while_clause
        (identifier)
        (condition
          (integer)))
      (statement
        (single_statement
          (break_statement
            (identifier))))))
  (statement
    (fork_statement
      (fork_clause
        (identifier)
        (integer))
      (statement
        (single_statement
          (function_call
            (identifier)
            (arguments
              (integer))))))))

================================================================================
try except and finally
================================================================================

try
  risky();
except err (E_PERM, E_INVARG)
  x = err;
except (ANY)
endtry
try
  risky();
finally
  cleanup();
endtry

--------------------------------------------------------------------------------

(source_file
  (statement
    (try_except_statement
      (statement
        (single_statement
          (function_call
            (identifier)
            (arguments))))
      (except_statement
        (except_clause
          (identifier)
          (exception_codes
            (error_code)
            (error_code)))
        (statement
          (single_statement
            (assignment_expression
              (identifier)
              (identifier)))))
      (except_statement
        (except_clause
          (exception_codes)))))
  (statement
    (try_finally_statement
      (statement
        (single_statement
          (function_call
            (identifier)
            (arguments))))
      (finally_statement
        (statement
          (single_statement
            (function_call
              (identifier)
              (arguments))))))))

================================================================================
keywords are case-insensitive
================================================================================

IF (x)
  RETURN E_PERM;
ElseIf (y)
ENDIF

--------------------------------------------------------------------------------

(source_file
  (statement
    (if_statement
      (if_clause
        (condition
          (identifier))
        (statement
          (single_statement
            (return_statement
              (error_code)))))
      (elseif_clause
        (condition
          (identifier))))))
